# go-stemmers

./: .gitignore  README.md  bench_test.go  fuzz_test.go  go.mod  stemmers.go  stemmers_test.go
.github/workflows/: ci.yml
cmd/oacorpus/: main.go
internal/arabic/: arabic.go
internal/danish/: danish.go
internal/dutch/: dutch.go
internal/english/: english.go
internal/finnish/: finnish.go
internal/french/: french.go
internal/german/: german.go
internal/greek/: greek.go
internal/hungarian/: hungarian.go
internal/italian/: italian.go
internal/norwegian/: norwegian.go
internal/portuguese/: portuguese.go
internal/romanian/: romanian.go
internal/russian/: russian.go
internal/snowball/: among.go  env.go
internal/spanish/: spanish.go
internal/swedish/: swedish.go
internal/tamil/: tamil.go
internal/turkish/: turkish.go
rustgen/: Cargo.toml
rustgen/src/: main.rs
testdata/: NOTICE.md  corpus.txt  res_ar.txt  res_da.txt  res_el.txt  res_en.txt  res_es.txt  res_fi.txt  res_fr.txt  res_ger.txt  res_hu.txt  res_it.txt  res_nl.txt  res_no.txt  res_pt.txt  res_ro.txt  res_ru.txt  res_sv.txt  res_tr.txt
